--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -107,7 +107,7 @@ aside.benefits img {
 }
 
 
-.search-engine-optimization {
+#search-engine-optimization {
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
